# lecture-1083-project

./: .gitignore  README.md  assignment.ipynb  pyproject.toml
data/: submission.csv
